--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@radix-ui/react-slot": "^1.1.2",
         "@vapi-ai/web": "^2.3.8",
         "ai": "^4.3.16",
+        "axios": "^1.10.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
