--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@hookform/resolvers": "^4.1.3",
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-slot": "^1.1.2",
+        "@tanstack/react-query": "^5.83.0",
         "@vapi-ai/web": "^2.3.8",
         "ai": "^4.3.16",
         "axios": "^1.10.0",
